tests/expected_invalid_reserved_names.diag.out
<input>:3:5: error: public name 'Yes' is reserved or too generic
        Yes,
        ^^^
<input>:4:5: error: public name 'No' is reserved or too generic
        No,
        ^^
<input>:5:5: error: public name 'True' is reserved or too generic
        True,
        ^^^^
<input>:6:5: error: public name 'False' is reserved or too generic
        False,
        ^^^^^
<input>:10:5: error: public name 'Some' is reserved or too generic
        Some,
        ^^^^
<input>:11:5: error: public name 'None' is reserved or too generic
        None,
        ^^^^
<input>:12:5: error: public name 'Absent' is reserved or too generic
        Absent,
        ^^^^^^
<input>:15:8: error: public name 'Other' is reserved or too generic
    public record Other {
           ^^^^^^^^^^^^^^
<input>:19:8: error: public name 'Invalid' is reserved or too generic
    public state Invalid {
           ^^^^^^^^^^^^^^^
<input>:23:8: error: public name 'Unset' is reserved or too generic
    public reason Unset {
           ^^^^^^^^^^^^^^
<input>:27:8: error: public name 'True' is reserved or too generic
    public proof True {
           ^^^^^^^^^^^^
<input>:31:8: error: public name 'Connected' is reserved or too generic
    public phase Connected {
           ^^^^^^^^^^^^^^^^^
<input>:40:8: error: public name 'No' is reserved or too generic
    public fn No() -> Int {
           ^^^^^^^^^^^^^^^^
<input>:45:5: error: public name 'AllowAll' is reserved or too generic
        AllowAll,
        ^^^^^^^^
<input>:50:12: error: public name 'Missing' is reserved or too generic
        public Missing: Int,
               ^^^^^^^^^^^^
<input>:51:12: error: public name 'Default' is reserved or too generic
        public Default: Int,
               ^^^^^^^^^^^^
<input>:52:12: error: public name 'Other' is reserved or too generic
        public Other: Int,
               ^^^^^^^^^^
<input>:53:12: error: public name 'Invalid' is reserved or too generic
        public Invalid: Int,
               ^^^^^^^^^^^^
<input>:54:12: error: public name 'Unset' is reserved or too generic
        public Unset: Int,
               ^^^^^^^^^^
<input>:58:14: error: public name 'Present' is reserved or too generic
        Loaded { Present: Int },
                 ^^^^^^^^^^^^
<input>:62:14: error: public name 'Unknown' is reserved or too generic
        Denied { Unknown: Text },
                 ^^^^^^^^^^^^^
<input>:66:12: error: public name 'Any' is reserved or too generic
        public Any: Int,
               ^^^^^^^^
<input>:75:9: error: public name 'Ready' is reserved or too generic
            Ready,
            ^^^^^
<input>:76:9: error: public name 'Unavailable' is reserved or too generic
            Unavailable,
            ^^^^^^^^^^^
<input>:77:9: error: public name 'Connected' is reserved or too generic
            Connected,
            ^^^^^^^^^
<input>:78:9: error: public name 'Disconnected' is reserved or too generic
            Disconnected,
            ^^^^^^^^^^^^
<input>:71:16: error: public name 'All' is reserved or too generic
            public All: Int,
                   ^^^^^^^^
<input>:72:16: error: public name 'Unrestricted' is reserved or too generic
            public Unrestricted: Int,
                   ^^^^^^^^^^^^^^^^^
<input>:82:8: error: public name 'X' is reserved or too generic
    public permit X
           ^^^^^^^^
<input>:84:8: error: public name 'Default' is reserved or too generic
    public domain module Default {
           ^^^^^^^^^^^^^^^^^^^^^^^
<input>:88:5: error: public name 'Known' is reserved or too generic
        Known,
        ^^^^^
<input>:89:5: error: public name 'Reported' is reserved or too generic
        Reported,
        ^^^^^^^^
<input>:90:5: error: public name 'NotReported' is reserved or too generic
        NotReported,
        ^^^^^^^^^^^
<input>:93:1: error: compiler-owned collection name 'MapEntry' is reserved
    record MapEntry {
    ^^^^^^^^^^^^^^^^^
<input>:96:1: error: compiler-owned collection name 'ListCardinalityFailure' is reserved
    reason ListCardinalityFailure {
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:97:5: error: compiler-owned collection name 'ListHadNoElements' is reserved
        ListHadNoElements,
        ^^^^^^^^^^^^^^^^^
<input>:101:5: error: compiler-owned collection name 'MapHadNoEntries' is reserved
        MapHadNoEntries,
        ^^^^^^^^^^^^^^^
<input>:104:1: error: compiler-owned collection name 'list_empty' is reserved
    fn list_empty() -> Int {
    ^^^^^^^^^^^^^^^^^^^^^^^^
<input>:108:1: error: compiler-owned collection name 'map_lookup_copy' is reserved
    fn map_lookup_copy() -> Int {
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:112:1: error: builtin type name 'Int' is reserved
    record Int {
    ^^^^^^^^^^^^
<input>:115:1: error: builtin type name 'Text' is reserved
    fn Text() -> Int {
    ^^^^^^^^^^^^^^^^^^
<input>:119:1: error: builtin type name 'Map' is reserved
    domain module Map {
    ^^^^^^^^^^^^^^^^^^^
